Removed old files

--- a/Tej/main.ipynb
+++ b/Tej/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "0de4725f",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
     "\n",
     "\n",
     "def main() -> None:\n",
-    "    data_dir = r\"C:\\Users\\tej31\\Documents\\GitHub\\MLME-ANN\\Data\"\n",
+    "    data_dir = r\"C:\\Users\\shami\\OneDrive\\Desktop\\Studies\\MLME\\Project\\MLME-ANN\\Data\"# change directory based on your laptop\n",
     "    df_all = load_txt_folder(data_dir, sep=\"\\t\")   # or sep=r\"\\s+\" for whitespace\n",
     "    print(df_all.head())\n",
     "\n",
@@ -60,9 +60,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PAS_2525",
+   "display_name": "PAS",
    "language": "python",
-   "name": "pas_2525"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
