Updated main file

--- a/Tej/main.ipynb
+++ b/Tej/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "0de4725f",
    "metadata": {},
    "outputs": [
@@ -126,93 +126,15 @@
     "from utils import load_txt_folder     \n",
     "from visualize import  visualize\n",
     "from tidy_features import tidy_features   # your existing loader\n",
-    "# ────────────────────────────────────────────────────────────────\n",
-    "# Feature-engineering / de-correlation helper (unchanged)\n",
-    "# ────────────────────────────────────────────────────────────────\n",
-    "# def tidy_features(\n",
-    "#     df: pd.DataFrame,\n",
-    "#     *,\n",
-    "#     corr_thresh: float = 0.95,\n",
-    "#     eps: float = 1e-9,\n",
-    "#     spread_name: str = \"spread\",\n",
-    "#     skew_name: str = \"skew\",\n",
-    "# ) -> pd.DataFrame:\n",
-    "#     df = df.copy()\n",
     "\n",
-    "#     # combine d10/d50/d90 → spread & skew\n",
-    "#     if {\"d10\", \"d50\", \"d90\"}.issubset(df.columns):\n",
-    "#         d10, d50, d90 = df[\"d10\"], df[\"d50\"], df[\"d90\"]\n",
-    "#         df[spread_name] = d90 - d10\n",
-    "#         df[skew_name]   = (d50 - d10) / (d90 - d50 + eps)\n",
-    "#         df.drop(columns=[\"d10\", \"d50\", \"d90\"], inplace=True)\n",
-    "\n",
-    "#     # drop highly-correlated numeric cols\n",
-    "#     num_df = df.select_dtypes(include=\"number\")\n",
-    "#     corr   = num_df.corr().abs()\n",
-    "#     upper  = corr.where(np.triu(np.ones(corr.shape), k=1).astype(bool))\n",
-    "#     to_drop = [c for c in upper.columns if any(upper[c] > corr_thresh)]\n",
-    "#     if to_drop:\n",
-    "#         df.drop(columns=to_drop, inplace=True)\n",
-    "#         print(f\"Dropped {len(to_drop)} highly correlated feature(s): {to_drop}\")\n",
-    "\n",
-    "#     return df\n",
-    "\n",
-    "# # ────────────────────────────────────────────────────────────────\n",
-    "# # Visualisation helpers  (add optional label)\n",
-    "# # ────────────────────────────────────────────────────────────────\n",
-    "# def _heatmap(df: pd.DataFrame, *, figsize=(8, 6), label: str = \"\") -> None:\n",
-    "#     corr = df.corr(numeric_only=True)\n",
-    "#     if corr.empty:\n",
-    "#         print(\"No numeric data to plot a heat-map.\")\n",
-    "#         return\n",
-    "\n",
-    "#     fig, ax = plt.subplots(figsize=figsize)\n",
-    "#     im = ax.imshow(corr, aspect=\"auto\")\n",
-    "#     ax.set_xticks(np.arange(len(corr.columns)), labels=corr.columns, rotation=90)\n",
-    "#     ax.set_yticks(np.arange(len(corr.columns)), labels=corr.columns)\n",
-    "#     ax.set_title(f\"Correlation heat-map {label}\")\n",
-    "#     fig.colorbar(im, ax=ax)\n",
-    "#     fig.tight_layout()\n",
-    "\n",
-    "\n",
-    "# def _histograms(\n",
-    "#     df: pd.DataFrame,\n",
-    "#     *,\n",
-    "#     bins: int = 30,\n",
-    "#     ncols: int = 3,\n",
-    "#     figsize=(10, 8),\n",
-    "#     label: str = \"\",\n",
-    "# ) -> None:\n",
-    "#     num_df = df.select_dtypes(include=\"number\")\n",
-    "#     if num_df.empty:\n",
-    "#         print(\"No numeric columns for histograms.\")\n",
-    "#         return\n",
-    "\n",
-    "#     nrows = -(-num_df.shape[1] // ncols)  # ceiling division\n",
-    "#     fig, axes = plt.subplots(nrows, ncols, figsize=figsize, squeeze=False)\n",
-    "#     axes = axes.flatten()\n",
-    "\n",
-    "#     for i, col in enumerate(num_df.columns):\n",
-    "#         axes[i].hist(num_df[col].dropna(), bins=bins)\n",
-    "#         axes[i].set_title(col)\n",
-    "\n",
-    "#     for j in range(i + 1, len(axes)):\n",
-    "#         axes[j].axis(\"off\")\n",
-    "\n",
-    "#     fig.suptitle(f\"Histograms {label}\")\n",
-    "#     fig.tight_layout()\n",
-    "\n",
-    "\n",
-    "# def visualize(df: pd.DataFrame, *, label: str = \"\") -> None:\n",
-    "#     _heatmap(df, label=label)\n",
-    "#     _histograms(df, label=label)\n",
-    "#     plt.show()\n",
-    "\n",
-    "# ────────────────────────────────────────────────────────────────\n",
-    "# Main entry-point\n",
-    "# ────────────────────────────────────────────────────────────────\n",
     "def main() -> None:\n",
-    "    data_dir = Path(r\"C:\\Users\\shami\\OneDrive\\Desktop\\Studies\\MLME\\Project\\MLME-ANN\\Data\")\n",
+    "    try:\n",
+    "        script_dir = Path(__file__).resolve().parent\n",
+    "    except NameError:\n",
+    "        script_dir = Path.cwd()\n",
+    "\n",
+    "    data_dir = script_dir.parent / \"Data\"    \n",
+    "\n",
     "    df_raw = load_txt_folder(data_dir, sep=\"\\t\")        # ↪ raw\n",
     "\n",
     "    print(\"\\nRaw data preview:\")\n",
