tiny_feature change to tiny

--- a/Tej/main.ipynb
+++ b/Tej/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0de4725f",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
     "\n",
     "from utils import load_txt_folder     \n",
     "from visualize import  visualize\n",
-    "from tidy_features import tidy_features   # your existing loader\n",
+    "from tidy import tidy_features   # your existing loader\n",
     "\n",
     "def main() -> None:\n",
     "    try:\n",
