--- a/BeatTheFelix.ipynb
+++ b/BeatTheFelix.ipynb
@@ -2,21 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "id": "5e3a378d",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔹 DATA_DIR_IN:  E:\\MLME\\Final1\\Beat-the-Felix\n",
+      "🔹 DATA_DIR_OUT: E:\\MLME\\Final1\\Results\\Beat-the-Felix-Results\n",
+      "🔹 MODEL_DIR:    E:\\MLME\\Final1\\Results\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\tej31\\AppData\\Local\\Temp\\ipykernel_34620\\169562543.py:48: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\tej31\\AppData\\Local\\Temp\\ipykernel_7524\\501459314.py:69: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  df_filtered[col] = df_filtered[col].interpolate(method='linear').fillna(method='bfill').fillna(method='ffill')\n",
-      "C:\\Users\\tej31\\AppData\\Local\\Temp\\ipykernel_34620\\169562543.py:64: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\tej31\\AppData\\Local\\Temp\\ipykernel_7524\\501459314.py:85: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  df_filtered[col] = df_filtered[col].interpolate(method='linear').fillna(method='bfill').fillna(method='ffill')\n",
-      "C:\\Users\\tej31\\AppData\\Local\\Temp\\ipykernel_34620\\169562543.py:64: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\tej31\\AppData\\Local\\Temp\\ipykernel_7524\\501459314.py:85: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  df_filtered[col] = df_filtered[col].interpolate(method='linear').fillna(method='bfill').fillna(method='ffill')\n",
-      "C:\\Users\\tej31\\AppData\\Local\\Temp\\ipykernel_34620\\169562543.py:64: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\tej31\\AppData\\Local\\Temp\\ipykernel_7524\\501459314.py:85: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  df_filtered[col] = df_filtered[col].interpolate(method='linear').fillna(method='bfill').fillna(method='ffill')\n"
      ]
     },
@@ -197,9 +206,30 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
     "\n",
-    "# ── SETTINGS ───────────────────────────────────────────────────────────────\n",
-    "DATA_DIR_IN     = r\"E:\\MLME\\release\\Beat-the-Felix\"\n",
-    "MODEL_DIR       = r\"E:\\MLME\\Final1\"\n",
+    "import os\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# 1) Determine repository root (where this notebook lives)\n",
+    "BASE_DIR = Path().resolve()\n",
+    "\n",
+    "# 2) Default input and output directories (relative to repo)\n",
+    "DEFAULT_IN  = BASE_DIR / \"Beat-the-Felix\"\n",
+    "DEFAULT_OUT = BASE_DIR / \"Results\"/ \"Beat-the-Felix-Results\"\n",
+    "\n",
+    "# 3) Allow environment overrides\n",
+    "DATA_DIR_IN  = Path(os.getenv(\"MLME_DATA_IN\",  DEFAULT_IN))\n",
+    "DATA_DIR_OUT = Path(os.getenv(\"MLME_DATA_OUT\", DEFAULT_OUT))\n",
+    "\n",
+    "# 4) Create output directory if it doesn't exist\n",
+    "DATA_DIR_OUT.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "# Define model directory (where checkpoints and clustering results are stored)\n",
+    "MODEL_DIR = BASE_DIR / \"Results\"\n",
+    "\n",
+    "# 5) Report settings\n",
+    "print(f\"🔹 DATA_DIR_IN:  {DATA_DIR_IN}\")\n",
+    "print(f\"🔹 DATA_DIR_OUT: {DATA_DIR_OUT}\")\n",
+    "print(f\"🔹 MODEL_DIR:    {MODEL_DIR}\")\n",
     "\n",
     "# ── CONFIG ───────────────────────────────────────────────────────────────────\n",
     "TARGET_COLS = [\"c\",\"T_PM\",\"d10\",\"d50\",\"d90\",\"T_TM\"]\n",
